Solving the z-index issue in Label boxes

--- a/src/styles/Labels.css
+++ b/src/styles/Labels.css
@@ -8,6 +8,10 @@
   opacity: 0.5;
 }
 
+.label:hover {
+  z-index: 2;
+}
+
 #labels-container {
   display: flex;
   flex-direction: column;
